--- a/preprint/preprint.Rmd
+++ b/preprint/preprint.Rmd
@@ -10,6 +10,8 @@ output:
 csl: mee.csl
 bibliography: refs.bib
 link-citations: yes
+urlcolor: niceblue
+linkcolor: niceblue
 header-includes:
   # \usepackage[left]{lineno}
   # \linenumbers
@@ -20,6 +22,8 @@ header-includes:
   \renewcommand{\thetable}{S\arabic{table}}
   \setcounter{figure}{0}
   \renewcommand{\thefigure}{S\arabic{figure}}}
+  \usepackage[dvipsnames]{xcolor}
+  \definecolor{niceblue}{HTML}{236899}
 editor_options:
   markdown:
     wrap: sentence
@@ -57,12 +61,12 @@ knitr::opts_chunk$set(
 # Introduction
 
 Recent amendments to Canada's *Fisheries Act* via the [[Fish Stocks provisions]{.ul}](https://laws-lois.justice.gc.ca/eng/acts/f-14/page-3.html#h-1175547) have increased DFO's focus on stock status with respect to biological reference points.
-The amendments are based on Canada's Precautionary Approach (PA) Framework, which describes two stock status reference points: (1) the Limit Reference Point (LRP), a "status below which serious harm is occurring to the stock"; and (2) the Upper Stock Reference Point (USR), which represents the "threshold below which removals must be progressively reduced in order to avoid reaching the LRP" (DFO 2009, Figure 1a).
+The amendments are based on Canada's Precautionary Approach (PA) Framework, which describes two stock status reference points: (1) the Limit Reference Point (LRP), a "status below which serious harm is occurring to the stock"; and (2) the Upper Stock Reference Point (USR), which represents the "threshold below which removals must be progressively reduced in order to avoid reaching the LRP" (DFO 2009, Figure \@ref(fig:pa-framework)a).
 The USR defines the breakpoint between the healthy and cautious zone and the LRP defines the breakpoint between the cautious and critical zone (Figure 1a).
-The LRP and USR are often calculated based on B~MSY~ (biomass at maximum sustainable yield) at provisional levels of 0.4 B~MSY~ and 0.8 B~MSY~, but in other cases can be based on proxies, such as average or minimum historical biomass levels (e.g., Forrest et al. 2020).
+The LRP and USR are often calculated based on B~MSY~ (biomass at maximum sustainable yield) at provisional levels of 0.4 B~MSY~ and 0.8 B~MSY~, but in other cases can be based on proxies, such as average or minimum historical biomass levels [e.g., @forrest2020pcod].
 
 (ref:fig-pa) Illustration of DFO's Precautionary Approach Framework. The two vertical lines---the Limit Reference Point (LRP) and Upper Stock Reference (USR)---are the focus of this analysis.
-Based on DFO (2009).
+Based on @dfo2009.
 (b) Overall mean biomass status ($x_{t}$) across all stocks for B/LRP, B/USR, and B/B~MSY~.
 Dark lines represent the median, shaded ribbons represent 95% quantile credible intervals, and thin lines represent 25 illustrative draws from the posterior distribution.
 
@@ -74,7 +78,7 @@ Assessment scientists conduct regular stock assessment for major fish stocks in 
 These assessments combine fishery-dependent data (such as commercial catches) with fishery-independent data (data from scientific surveys) to estimate quantities such as spawning stock biomass, growth and maturity, and derive measures of stock status and fishing intensity.
 Here, we gathered output data from assessments for 24 stocks representing the Bayesian posterior distribution of estimated biomass (B) compared to three measures of stock status: (1) B/LRP (biomass divided by the LRP), (2) B/USR (biomass divided by the USR), (3) B/B~MSY~ (biomass divided by B~MSY~).
 We developed a hierarchical Bayesian state-space time-series model to explore trends in these measures of status across all stocks until the year 2020.
-To do this, we built on a model described in Hilborn et al. (2020) in two ways: (1) we incorporated uncertainty in stock-specific status; and (2) we projected the latent underlying stock-specific status forward to the last year (2020).
+To do this, we built on a model described in @hilborn2020 in two ways: (1) we incorporated uncertainty in stock-specific status; and (2) we projected the latent underlying stock-specific status forward to the last year (2020).
 The latter accounts for not all stocks having an up-to-date stock assessment and accounts for future possible stock states based on the time-series properties of the fitted stock trajectories.
 
 # Methods
@@ -92,44 +96,54 @@ where ${\widehat{y}}_{j,t}$ is the mean log stock status for stock $j$ and time 
 The symbol $\alpha_{j}$ represents a stock-specific intercept that is constrained such that the sum of all $\alpha_{j}$ is zero to make the overall mean $x_{t}$ identifiable.
 The symbol $\epsilon_{j,t}$ represents a first-order autoregressive (AR1) deviation with correlation $\rho$ and standard deviation $\sigma_{\epsilon}$.
 We placed half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$, Normal(0, 5^2^) priors on $x_{0}$ and $\alpha_{j}$, and a Normal(0, 1)[-1, 1] prior on $\rho$.
-We fit the models with Stan (Carpenter et al. 2017; Stan Development Team 2020), sampling 1000 iterations on each of 6 chains and discarding the first half as warm up.
+We fit the models with Stan [@carpenter2017; @rstan2020], sampling 1000 iterations on each of 6 chains and discarding the first half as warm up.
 Data and code to reproduce our analysis are available at <https://github.com/pbs-assess/gftrends>.
 
 # Results
 
-Of the 24 groundfish stock status time series included in the analysis, four stocks provided historical reference points for management advice, 18 provided MSY-based reference points, and two (Rocksole in Areas 5AB and 5CD) provided both historical and MSY reference points (we herein use the MSY-based ones).
+Of the 24 groundfish stock status time series included in the analysis (Table 1), four stocks provided historical reference points for management advice, 18 provided MSY-based reference points, and two (Rocksole in Areas 5AB and 5CD) provided both historical and MSY reference points (we herein use the MSY-based ones).
 The most recent assessments were for the Rougheye/Blackspotted Rockfish complex, Pacific Cod, Bocaccio, inside and outside Yelloweye Rockfish, and Sablefish.
 
-Across all stocks, there was a decline in average stock status for all three indices prior to approximately 2000 (Figure 1b).
+
+Across all stocks, there was a decline in average stock status for all three indices prior to approximately 2000 (Figure \@ref(fig:pa-framework)b).
 The late 1990s and early 2000s marked the beginning of a relatively stable average status.
 We estimated the overall mean B/LRP in 2020 to be 3.2 (95% credible interval [CI]: 2.6--3.9).
 The overall mean B/USR and B/B~MSY~ in 2020 was 1.5 (95% CI: 1.3--1.9) and 1.4 (95% CI: 1.1--1.7), respectively.
-Uncertainty in average status in the last few years increased because not all stocks had a current assessment (Figure 1b).
+Uncertainty in average status in the last few years increased because not all stocks had a current assessment (Figure \@ref(fig:pa-framework)b).
 
 (ref:fig-ts-lrp) Trends in B/LRP for 24 groundfish stocks in BC.
 Coloured lines and ribbons represent the individual stocks.
 Colours represent the ratio in the last year of assessment such that green stocks are highest and purple are lowest.
 Dark coloured lines and shaded ribbons represent output from stock assessments: trajectories of median B/LRP 95% quantile credible intervals.
 Thin lines represent draws from the posterior distribution of $y_{j,t}$ (latent stock-specific mean trends; colours) and $x_{t}$ (latent overall mean trend; grey).
-The overall mean trend ($x_{t}$; grey) is the same across panels (see Figure 1b).
+The overall mean trend ($x_{t}$; grey) is the same across panels (Figure \@ref(fig:pa-framework)b).
+
 
 ```{r ts-lrp, fig.cap = "(ref:fig-ts-lrp)", out.width="4.6in", fig.align="center", fig.pos="ht"}
 include_graphics(here("figs/blrp-x-t.pdf"))
 ```
 
-The clear pattern in the average biological status has been accompanied by considerable variation within and across individual stocks (Figure 2).
+<!-- \clearpage -->
+
+```{r, results='asis'}
+library(magrittr)
+source(here::here("preprint/refs-table.R"))
+csasdown::csas_table(refs, col.names = c("Stock", "Reference"), caption = "Groundfish stocks included in the analysis with associated data reference. In cases where a Research Document is still `In press', we indicate the associated Science Advisory Report where the author is DFO.", longtable = FALSE)
+```
+
+The clear pattern in the average biological status has been accompanied by considerable variation within and across individual stocks (Figure \@ref(fig:ts-lrp)).
 Within individual stocks, Pacific Cod and Walleye Pollock---both with shorter generation times compared to many other stocks here---exhibited strong patterns of decadal variation.
 Across stocks, Redstripe Rockfish in northern and southern BC and coastwide Yellowtail Rockfish are examples of stocks with B/LRP trajectories consistently above the average.
 Conversely, Lingcod in 4B and coastwide Bocaccio are examples of stocks with B/LRP estimated consistently below the average.
 Sablefish followed the average B/LRP trajectory until around 1990 when they continued to decline while the average stabilized.
-The Sablefish stock trajectory has shown signs of increase since around 2015 as a result of large recent recruitments (DFO 2020a; Figure 2).
+The Sablefish stock trajectory has shown signs of increase since around 2015 as a result of large recent recruitments [@dfo2020sablefish, Figure \@ref(fig:ts-lrp)].
 
-Estimated biomass was above the LRP and USR for most stocks as of the most recent assessment (Figure 3).
-Lingcod in 4B and coastwide Bocaccio were the only stocks (with full posterior distributions available) with $>$ 5% posterior density below their LRP as of their most recent assessment (Figure 3).
+Estimated biomass was above the LRP and USR for most stocks as of the most recent assessment (Figure \@ref(fig:ridges)).
+Lingcod in 4B and coastwide Bocaccio were the only stocks (with full posterior distributions available) with $>$ 5% posterior density below their LRP as of their most recent assessment (Figure \@ref(fig:ridges)).
 Pacific Cod in 3CD almost met this threshold with a 4.6% probability B $<$ LRP in 2020.
-The assessment of Bocaccio, however, projected the stock to rebuild above the LRP by 2023 due to a very large recruitment event in 2016 (DFO 2020b).
-Quillback Rockfish in both outside and inside waters had $>$ 5% posterior density below their LRPs as of the 2011 assessment, but the full posterior distribution was not available (quantiles are shown in Figure 2).
-Considering the USR instead of the LRP, 7/22 of the stocks in Figure 3 had \> 25% probability of being below their USR as of their most recent assessment.
+The assessment of Bocaccio, however, projected the stock to rebuild above the LRP by 2023 due to a very large recruitment event in 2016 [@dfo2020bocaccio].
+Quillback Rockfish in both outside and inside waters had $>$ 5% posterior density below their LRPs as of the 2011 assessment, but the full posterior distribution was not available (quantiles are shown in Figure \@ref(fig:ts-lrp)).
+Considering the USR instead of the LRP, 7/22 of the stocks in Figure \@ref(fig:ridges) had \> 25% probability of being below their USR as of their most recent assessment.
 
 (ref:fig-ridges) Posterior distribution of the three measures of stock status for 22 of the 24 stocks.
 Stocks are arranged in order of assessment with the most recent assessments at the top; years in the first column represent the year the status represents.
@@ -138,7 +152,7 @@ Stocks with missing data in the B/B~MSY~ column are assessments where historical
 Vertical dashed lines are at values of 1.0 in all columns and also at values of 0.4 and 0.8 in the B/B~MSY~ column (0.4 and 0.8 B~MSY~ are provisional LRP and USR values in the PA Framework).
 The x-axis has been square-root transformed to slightly compress high ratio values for visualization.
 In a few cases (e.g., Bocaccio) the status represents a one- or two-year projection from the last year of available data.
-The full posteriors were not available for Quillback Rockfish stocks, which are shown in Figure 2.
+The full posteriors were not available for Quillback Rockfish stocks, which are shown in Figure \@ref(fig:ts-lrp).
 
 <!-- TODO: SOME HAVE PROJECTIONS? -->
 
@@ -146,23 +160,25 @@ The full posteriors were not available for Quillback Rockfish stocks, which are 
 include_graphics(here("figs/ridges.pdf"))
 ```
 
+\clearpage
+
 # Discussion
 
 <!-- ## Factors influencing trends -->
 
 The factors most likely influencing the trends illustrated here have been fishery removals and management interventions.
-The transition from declining average B/LRP and B/USR to a relatively stable trajectory coincided with the implementation of individual transferable quotas (ITQs) for the trawl fleet and the introduction of 100% at-sea observer coverage over the period 1992--1997 (Turris 2000) and with the initiation of the current synoptic trawl surveys in 2003.
-Furthermore, ITQs and electronic at-sea monitoring were introduced into the longline and trap fisheries in 2006 (Stanley et al. 2015).
-Following these major management changes, quota for many stocks has remained relatively constant over the last two decades (DFO 2019).
-The decadal patterns in assessed status for Pacific Cod (Forrest et al. 2019) and Walleye Pollock (Starr and Haigh 2019) in early decades are largely driven by trends in commercial catches and catch per unit effort.
-Consistently poor recruitment for decades is thought to be the primary driver behind stock declines for some rockfish such as Bocaccio (DFO 2020b), although many stocks are data-limited and there is therefore considerable uncertainty around recruitment trends, which may be confounded with other factors such as the management changes noted above.
-In terms of absolute stock status, estimates of B~MSY~ for data-limited species may be highly uncertain, or in some cases biased (Forrest et al., 2018).
+The transition from declining average B/LRP and B/USR to a relatively stable trajectory coincided with (1) the implementation of individual transferable quotas (ITQs) for the trawl fleet, (2) the introduction of 100% at-sea observer coverage over the period 1992--1997 [@turris2000], and (3) with the initiation of the current synoptic trawl surveys in 2003.
+Furthermore, ITQs and electronic at-sea monitoring were introduced into the longline and trap fisheries in 2006 [@stanley2015].
+Following these major management changes, quota for many stocks has remained relatively constant over the last two decades [@dfo2019ifmp].
+The decadal patterns in assessed status for Pacific Cod [@forrest2020pcod] and Walleye Pollock [@starr2021pollock] in early decades are largely driven by trends in commercial catches and catch per unit effort.
+Consistently poor recruitment for decades is thought to be the primary driver behind stock declines for some rockfish such as Bocaccio [@dfo2020bocaccio], although many stocks are data-limited and there is therefore considerable uncertainty around recruitment trends, which may be confounded with other factors such as the management changes noted above.
+In terms of absolute stock status, estimates of B~MSY~ for data-limited species may be highly uncertain, or in some cases biased [@forrest2018].
 
 There are also potential species interactions and climatic effects on trends in local biomass density of these species.
-Loss of spawning habitat due to recent oceanographic conditions has been hypothesized to have led to years of low recruitment in some groundfish (e.g., Pacific Cod in nearby Alaskan waters; Laurel and Rogers 2020).
-Conversely, after decades of poor recruitment, Bocaccio experienced a year of extremely strong recruitment (44 times the average for Bocaccio in 2016; DFO 2020b) possibly due to the availability of oxygen-rich water at depth during gestation (Schroeder et al. 2019).
-The slow recovery of Area 4B Lingcod since initial fishery-driven declines between the 1930s and 1980s may be a result of changes in the Strait of Georgia ecosystem (e.g., plankton timing, pinnipeds; DFO 2015).
-Underlying these stock-level trends, recent work suggests that temperature velocity---the pace a fish would have to move to maintain consistent temperature---may be related to a fine-scale redistribution of groundfish species density in Canadian Pacific waters (English et al. 2021).
+Loss of spawning habitat due to recent oceanographic conditions has been hypothesized to have led to years of low recruitment in some groundfish [e.g., Pacific Cod in nearby Alaskan waters; @laurel2020].
+Conversely, after decades of poor recruitment, Bocaccio experienced a year of extremely strong recruitment [44 times the average for Bocaccio in 2016, @dfo2020bocaccio] possibly due to the availability of oxygen-rich water at depth during gestation [@schroeder2019].
+The slow recovery of Area 4B Lingcod since initial fishery-driven declines between the 1930s and 1980s may be a result of changes in the Strait of Georgia ecosystem [e.g., plankton timing, pinnipeds; @holt2016lingsog].
+Underlying these stock-level trends, recent work suggests that temperature velocity---the pace a fish would have to move to maintain consistent temperature---may be related to a fine-scale redistribution of groundfish species density in Canadian Pacific waters [@english2021b].
 
 <!-- ## Implications of those trends -->
 
@@ -170,7 +186,13 @@ The Sustainable Fisheries Framework and the Fish Stocks provisions of the *Fishe
 Stocks below their LRP will require a rebuilding plan.
 While average stock status was clearly above the LRP as of 2020, there was considerable variation among stocks.
 Four stocks had $>$ 5% probability of being below their LRP and roughly one-third of assessed stocks had $>$ 25% probability of being in the cautious zone where removals should be progressively reduced to avoid reaching the LRP.
-Rebuilding and precautionary management of stocks in the critical and cautious zones, respectively, should help ensure stock status improves over time in response to reduced fishing pressure and favorable environmental conditions if and when they occur.
+Rebuilding and precautionary management of stocks in the critical and cautious zones, respectively, should help ensure stock status improves over time in response to reduced fishing pressure and favourable environmental conditions if and when they occur.
+
+<!-- # Acknowledgements -->
+
+<!-- We thank the  -->
+
+<!--
 
 # References
 
@@ -184,7 +206,7 @@ DFO. 2015. Stock assessment for Lingcod (*Ophiodon elongatus*) for the Strait of
 
 DFO. 2019. Pacific Region Integrated Fishery Management Plan. Groundfish. Effective February 21, 2019 <https://www.pac.dfo-mpo.gc.ca/fm-gp/mplans/ground-fond-ifmp-pgip-sm-eng.html>.
 
-DFO. 2020a. Evaluating the robustness of candidate management procedures in the BC Sablefsh (*Anoplopoma fimbria*) fishery for 2019--2020. DFO Can. Sci. Advis. Sec. Sci. Resp. 2020/025.
+DFO. 2020a. Evaluating the robustness of candidate management procedures in the BC Sablefish (*Anoplopoma fimbria*) fishery for 2019--2020. DFO Can. Sci. Advis. Sec. Sci. Resp. 2020/025.
 
 DFO 2020b. Bocaccio (*Sebastes paucispinis*) stock assessment for British Columbia in 2019, including guidance for rebuilding plans. DFO Can. Sci. Advis. Sec. Sci. Advis. Rep 2020/025.
 
@@ -220,10 +242,10 @@ ICES J. Mar. Sci. **72**(4): 1230--1236.
 Starr, P.J., and Haigh, R. 2019. Walleye Pollock (*Theragra chalcogramma*) stock assessment for British Columbia in 2017. DFO Can. Sci. Advis. Sec. Res. Doc. In press.
 
 Turris, B.R. 2000. A comparison of British Columbia's ITQ fisheries for groundfish trawl and sablefish: Similar results from programmes with differing objectives, designs and processes. FAO Fisheries Technical Paper (No. 404/1): 254--261. Food and Agriculture Organization (FAO). 
+-->
 
-<!-- \clearpage -->
 
-<!--
+# References
+
 ::: {#refs}
 :::
--->
