Fix some citations

--- a/preprint/refs.bib
+++ b/preprint/refs.bib
@@ -63,7 +63,7 @@
 
 @Article{         forrest2020pcod,
   author        = {Forrest, R. E. and Anderson, S. C. and Grandin, C. J. and
-                  Starr P. J.},
+                  Starr, P. J.},
   year          = {2020},
   title         = {Assessment of {Pacific Cod} ({\emph{Gadus macrocephalus}})
                   for {Hecate Strait} and {Queen Charlotte Sound} ({Area
@@ -196,12 +196,14 @@
   volume        = {2020/056}
 }
 
-
-
-
-
-
-
+@Article{         dfo2015yellowtail,
+  author        = {{DFO}},
+  year          = {2015},
+  title         = {Yellowtail Rockfish ({\emph{Sebastes Flavidus}}) Stock Assessment for the Coast of {British
+Columbia, Canada}},
+  journal       = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume        = {2015/010}
+}
 
 @Article{         dfo2009,
   title         = {{A Fishery Decision-Making Framework Incorporating the
