--- a/preprint/refs.bib
+++ b/preprint/refs.bib
@@ -199,7 +199,7 @@
 @Article{         dfo2015yellowtail,
   author        = {{DFO}},
   year          = {2015},
-  title         = {Yellowtail Rockfish ({\emph{Sebastes Flavidus}}) Stock Assessment for the Coast of {British
+  title         = {Yellowtail {Rockfish} ({\emph{Sebastes Flavidus}}) Stock Assessment for the Coast of {British
 Columbia, Canada}},
   journal       = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
   volume        = {2015/010}
