get stitch of HBLL OUT working

--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -4,16 +4,16 @@ author: "Philina English"
 date: "`r Sys.Date()`"
 output: html_document
 params:
-    species: "Redbanded Rockfish"
+    # species: "Redbanded Rockfish"
+    # species: "Arrowtooth Flounder"
     # species: "North Pacific Spiny Dogfish"
     # species: "Pacific Ocean Perch"
-    # species: "Bocaccio"
+    species: "Bocaccio"
     # species: "Yelloweye Rockfish"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
-    region: "All synoptic surveys"
-    # region: "Both even year surveys"
-    start_year: 2003
+    # region: "Coast-wide trawl surveys"
+    region: "HBLL outside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
     update_model: FALSE # TRUE will over write past models; will alway attempt a model if none exists
     update_index: TRUE
@@ -52,85 +52,166 @@ update_index <- params$update_index
 paste("region =", region)
 paste("model label =", name)
 ```
-
+Load data
 ```{r, message=FALSE, warning=FALSE}
 spp <- gsub(" ", "-", gsub("\\/", "-", tolower(species)))
+all_data <- readRDS(paste0("~/github/dfo/gfsynopsis/report/data-cache/", spp, ".rds"))
 
-if (region == "Both odd year surveys") {
+if (region == "Both odd year trawl surveys") {
   nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
   survey <- c("SYN QCS", "SYN HS")
+  type <- "trawl"
   model_ssid <- c(1, 3)
-  ssid_string <- paste0(model_ssid, collapse = "n")
-  years <- NULL
 }
 
-if (region == "West Coast Vancouver Island") {
+if (region == "QCS only") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  survey <- c("SYN QCS")
+  type <- "trawl"
+  model_ssid <- c(1)
+}
+
+if (region == "HS only") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  survey <- c("SYN HS")
+  type <- "trawl"
+  model_ssid <- c(3)
+}
+
+if (region == "WCVI only") {
   nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
   survey <- c("SYN WCVI")
+  type <- "trawl"
   model_ssid <- c(4)
-  ssid_string <- paste0(model_ssid, collapse = "n")
-  years <- NULL
 }
 
-if (region == "West Coast Haida Gwaii") {
+if (region == "WCHG only") {
   nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
   survey <- c("SYN WCHG")
+  type <- "trawl"
   model_ssid <- c(16)
-  ssid_string <- paste0(model_ssid, collapse = "n")
-  years <- NULL
 }
 
-if (region == "All synoptic surveys") {
+if (region == "Coast-wide trawl surveys") {
   nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
-  family <- tweedie(link = 'log')
   survey <- c("SYN QCS", "SYN HS", "SYN WCVI", "SYN WCHG")
-  units <- "density_kgpm2"
+  type <- "trawl"
   model_ssid <- c(1, 3, 4, 16)
-  ssid_string <- paste0(model_ssid, collapse = "n")
-  years <- NULL
+}
+
+if (region == "North (PMFC 5DE)") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  nd_5D <- filter(nd_all, survey == "SYN HS") %>% filter(Y > 5907.814)
+  nd_5E <- filter(nd_all, survey == "SYN WCHG") 
+  nd_all <- bind_rows(nd_5D, nd_5E)
+  survey <- c("SYN HS", "SYN WCHG")
+  type <- "trawl"
+  model_ssid <- c(3, 16)
+}
+
+if (region == "South (PMFC 3CD5ABC)") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  nd_5C <- filter(nd_all, survey == "SYN HS") %>% filter(Y < 5907.814)
+  nd_south <- filter(nd_all, survey %in% c("SYN QCS", "SYN WCVI")) 
+  nd_all <- bind_rows(nd_5C, nd_south)
+  survey <- c("SYN HS", "SYN QCS", "SYN WCVI")
+  type <- "trawl"
+  model_ssid <- c(1, 3, 4)
+}
+
+if (region == "South 5 only (PMFC 5ABC)") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  nd_5C <- filter(nd_all, survey == "SYN HS") %>% filter(Y < 5907.814)
+  nd_QCS <- filter(nd_all, survey %in% c("SYN QCS")) 
+  nd_all <- bind_rows(nd_5C, nd_QCS)
+  survey <- c("SYN HS", "SYN QCS")
+  type <- "trawl"
+  model_ssid <- c(1, 3)
+}
+
+if (region == "HS & WCHG") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  survey <- c("SYN HS", "SYN WCHG")
+  type <- "trawl"
+  model_ssid <- c(3, 16)
+}
+
+if (region == "QCS & WCVI") {
+  nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  survey <- c("SYN QCS", "SYN WCVI")
+  type <- "trawl"
+  model_ssid <- c(1, 4)
 }
 
 if (region == "HBLL outside surveys") {
-  # need a grid for HBLL outside
-  # nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
-  # family <- nbinom2(link = 'log') # could use this instead, but would need to add offset
-  family <- tweedie(link = 'log')
+  nd_N <- gfplot::hbll_n_grid$grid %>% mutate(survey = "HBLL OUT N")
+  d_N <- all_data$survey_sets %>% filter(survey_abbrev == "HBLL OUT N") 
+  timeN <- sort(unique(d_N$year))
+  nd_N2 <- do.call("rbind", replicate(length(timeN), nd_N, simplify = FALSE))
+  nd_N2[["year"]] <- rep(timeN, each = nrow(nd_N))
+  
+  nd_S <- gfplot::hbll_s_grid$grid %>% mutate(survey = "HBLL OUT S")
+  d_S <- all_data$survey_sets %>% filter(survey_abbrev == "HBLL OUT S") 
+  timeS <- sort(unique(d_S$year))
+  nd_S2 <- do.call("rbind", replicate(length(timeS), nd_S, simplify = FALSE))
+  nd_S2[["year"]] <- rep(timeS, each = nrow(nd_S))
+  nd_all <- bind_rows(nd_N2, nd_S2) %>% rename(longitude = X, latitude = Y) %>% mutate(area = 4)
+  nd_all <- sdmTMB::add_utm_columns(nd_all, c("longitude", "latitude"))
   survey <- c("HBLL OUT N", "HBLL OUT S")
-  units <- "density_pcpm2"
+  type <- "hbll"
   model_ssid <- c(22, 36)
-  years <- NULL
 }
 
 if (region == "HBLL inside surveys") {
   # need a grid for HBLL outside
   # nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
-  # family <- nbinom2(link = 'log') # could use this instead, but would need to add offset
-  family <- tweedie(link = 'log')
   survey <- c("HBLL IN N", "HBLL IN S")
-  units <- "density_pcpm2"
+  type <- "hbll"
   model_ssid <- c(39, 40)
-  years <- NULL
 }
+
 
 ```
 
 
-Load and filter data 
+Filter data 
 ```{r}
-all_data <- readRDS(paste0("~/github/dfo/gfsynopsis/report/data-cache/", spp, ".rds"))
-d <- all_data$survey_sets %>%
-  filter(survey_abbrev %in% survey) %>%
-  filter(year >= params$start_year)
-d$density <- d[[units]] * 1000000 # change from per m2 to per km2
+if (type == "trawl"){
+  d <- all_data$survey_sets %>%
+  filter(survey_abbrev %in% survey) 
+  units <- "density_kgpm2"  
+  d$density <- d[[units]] * 1000000 # change from per m2 to per km2
+  family <- tweedie(link = 'log')
+} else {
+  units <- "density_ppkm2"
+  d$density <- d[[units]] # change from per m2 to per km2
+  family <- tweedie(link = 'log')
+  # family <- nbinom2(link = 'log') # could use this instead, but would need to change units and add offset
+}
+
+if (region == "North (PMFC 5DE)") {
+  d <- d %>% filter(survey_abbrev == "SYN WCHG" | latitude > 53.3)
+}
+
+if (region == "South (PMFC 3CD5ABC)") {
+  d <- d %>% filter(survey_abbrev != "SYN WCHG" & latitude < 53.3)
+}
+
+if (region == "South 5 only (PMFC 5ABC)") {
+  d <- d %>% filter(survey_abbrev %in% c("SYN QCS", "SYN HS") & latitude < 53.3)
+}  
+  
 positive_sets <- filter(d, density != 0)
 prop_pos <- round(nrow(positive_sets) / nrow(d), digits = 3)
 data <- d %>% filter(survey_abbrev %in% unique(positive_sets$survey_abbrev))
 ssid_string <- paste0( unique(data$survey_series_id.x), collapse = "n")
 surv_string <- paste0( unique(data$survey_abbrev), collapse = ", ")
+data <- sdmTMB::add_utm_columns(data, c("longitude", "latitude"))
 ```
 
-# Check if a model already exists
+
 ```{r}
+# Check if a model already exists
 try({
   m <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, ".rds"))
 })
@@ -139,14 +220,17 @@ if (!exists("m")) update_model <- TRUE
 
 Make mesh
 ```{r}
-data <- sdmTMB::add_utm_columns(data, c("longitude", "latitude"))
-
 if (prop_pos < 0.1) {
   spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = 25)
   plot(spde)
 } else {
-  spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = 15)
-  plot(spde)
+  if (prop_pos < 0.7) {
+    spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = 10)
+    plot(spde)
+  } else {
+    spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = 15)
+    plot(spde)
+  }
 }
 ```
 
@@ -176,6 +260,10 @@ if (update_model) {
 try({
   m <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, ".rds"))
 })
+if (max(m$gradients) > 0.001) {
+  m <- run_extra_optimization(m)
+  saveRDS(m, file = paste0("models/m-", spp, "-", ssid_string, name, ".rds"))
+}
 if (exists("m")) {
   m
 }
@@ -192,8 +280,8 @@ depth_limit <- ifelse(
 
 Get simulated index
 ```{r}
-if (exists("m") & update_index) {
-  if (max(m$gradients) < 0.001) {
+if (exists("m")) {
+  if (max(m$gradients) < 0.001 & update_index) {
     nd <- nd_all %>%
       filter(survey %in% unique(positive_sets$survey_abbrev)) %>%
       filter(year %in% unique(m$data$year)) %>%
@@ -205,7 +293,15 @@ if (exists("m") & update_index) {
     # saveRDS(p, file = paste0("data/p-", spp, "-", ssid_string, name, ".rds"))
 
     i <- get_index_sims(p, area = nd$area) 
-    i <- i %>% mutate(max_grad = max(m$gradients))
+    i <- i %>% mutate(
+      species = species,
+      type = type, 
+      region = region,
+      surveys = paste(unique(positive_sets$survey_abbrev), collapse = ", "),
+      ssids = paste(unique(positive_sets$survey_series_id.x), collapse = ", "),
+      ssid_string = ssid_string, 
+      max_grad = max(m$gradients)
+      )
     saveRDS(i, paste0("data/i-", spp, "-", ssid_string, name, ".rds"))
   }
   max(m$gradients)
@@ -218,6 +314,7 @@ try({
 })
 
 if (exists("i")) {
+  rm(g)
   g <- ggplot(i, aes(year, est / 1000)) +
     geom_line() +
     geom_ribbon(aes(ymin = lwr / 1000, ymax = upr / 1000), alpha = 0.4) +
@@ -225,7 +322,7 @@ if (exists("i")) {
       max(i$upr) < 5 * max(i$est), max(i$upr) / 1000, max(i$est) * 2 / 1000
     ))) +
     ylab("Biomass (tonnes)") +
-    ggtitle(paste(species), subtitle = paste(surv_string))
+    ggtitle(paste(species), subtitle = paste0(region, " (", surv_string, ")"))
   ggsave(paste0("figs/", spp, "-", ssid_string, name, ".png"), height = 4, width = 6)
   g
 }
