--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -144,14 +144,7 @@ if (region == "QCS & WCVI") {
 }
 
 if (region == "HBLL outside surveys") {
-  nd_N <- gfplot::hbll_n_grid$grid %>% mutate(survey = "HBLL OUT N")
-  nd_S <- gfplot::hbll_s_grid$grid %>% mutate(survey = "HBLL OUT S")
-  nd_all1 <- bind_rows(nd_N, nd_S) %>% rename(longitude = X, latitude = Y) %>% mutate(area = 4)
-  d <- all_data$survey_sets %>% filter(survey_abbrev %in% c("HBLL OUT S", "HBLL OUT N")) 
-  time <- sort(unique(d$year))
-  nd_all <- do.call("rbind", replicate(length(time), nd_all1, simplify = FALSE))
-  nd_all[["year"]] <- rep(time, each = nrow(nd_all1))
-  nd_all <- sdmTMB::add_utm_columns(nd_all, c("longitude", "latitude"))
+  nd_all <- readRDS(paste0("data/nd_hbll_outside_index.rds")) %>% mutate(area = 4)
   survey <- c("HBLL OUT N", "HBLL OUT S")
   type <- "hbll"
   model_ssid <- c(22, 36)
@@ -159,7 +152,7 @@ if (region == "HBLL outside surveys") {
 
 if (region == "HBLL inside surveys") {
   # need a grid for HBLL outside
-  # nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
+  # nd_all <- readRDS(paste0("data/nd_hbll_inside_index.rds")) %>% mutate(area = 4)
   survey <- c("HBLL IN N", "HBLL IN S")
   type <- "hbll"
   model_ssid <- c(39, 40)
